--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.9.0"
   }
 }
